# GraviT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE_header  README  README.md  configure.sh  env.sh  format.sh  launch.sh
CMake/: CompilerInfo.cmake  ConfigCompilerFlags.cmake  FindDX.cmake  FindEmbree.cmake  FindManta.cmake  FindOSPRay.cmake  FindOptiX.cmake  FindTBB.cmake  Macros.cmake  boost.cmake  clang.cmake  doxygen.cmake  gcc.cmake  glm.cmake  gravit.cmake  icc.cmake  macros.cmake  mpi.cmake
Test/: iostuff.h  timer.h
cavit/: CMakeLists.txt
cavit/CMake/: FindGLM.cmake
cavit/src/: .fuse_hidden000000ce00000001  .fuse_hidden000004d400000001  .fuse_hidden0000076300000005  .fuse_hidden000007a200000006  .fuse_hidden000007ba00000007  .fuse_hidden0000119700000001  .fuse_hidden000011a100000002  .fuse_hidden0000124800000003  .fuse_hidden000012ce00000004  .fuse_hidden0003aa9100000002  gvtDisplay.cc  gvtDisplay.h  gvtInterface.cc  gvtInterface.h  gvtMCube.cc  gvtMCube.h  gvtServer.cc  gvtServer.h  gvtState.cc  gvtState.h  gvtWorker.cc  gvtWorker.h  test.cc
cavit/tinyobjloader-master/: Makefile
data/: .box.conf.swp  .bunny.conf.swp  README.conf  box.conf  bunny.conf  bunny.new  bunny.old  bunny4.conf  bunny_optix.conf  bunny_optix_obj.conf  cornell.conf  mpitrace.conf  mpitrace_old.conf  sibenik.conf  wavelet.vtp
doc/: .gitignore  README.md  doxyconfig.in
pygvt/: README.md  cosmolog.py  cosmology_plus.py  example_plyapp.py  example_reader.py  gvtVol.py  gvtVol_parallel.py  gvtVol_serial.py  gvtVol_yt.py  halo0.vtk  halo1.vtk  halo10.vtk  halo11.vtk  halo12.vtk  halo13.vtk  halo14.vtk  halo15.vtk  halo16.vtk  halo17.vtk  halo18.vtk  halo19.vtk  halo2.vtk  halo20.vtk  halo21.vtk  halo22.vtk  halo23.vtk  halo24.vtk  halo3.vtk  halo4.vtk  halo5.vtk  halo6.vtk  halo7.vtk  halo8.vtk  halo9.vtk  reader.py  setenv.sh  setup.py  test.py  test_example_plyapp.sh  test_example_reader.sh
src/: CMakeLists.txt  licenseheader
src/Backend/Manta/: CMakeLists.txt  gvtmanta.h
src/Backend/Manta/Data/: gvt_manta.h
src/Backend/Manta/Domain/: MantaDomain.C  MantaDomain.h
src/Backend/Manta/ProcessQueue/: MantaProcessQueue.cpp  MantaProcessQueue.h
src/Backend/Optix/: CMakeLists.txt  gvtoptix.h
src/Backend/Optix/Data/: ConvertKernels.cu  gvt_optix.h  optix_dataformat.h
src/Backend/Optix/Dataset/: OptixDataset.C  OptixDataset.h
src/Backend/Optix/Domain/: OptixDomain.C  OptixDomain.cu  OptixDomain.h
src/Backend/Optix/ProcessQueue/: OptixProcessQueue.cpp  OptixProcessQueue.h
src/Frontend/ConfigFile/: CMakeLists.txt  ConfigFileLoader.cpp  ConfigFileLoader.h  RayTracer.C  RayTracer.h
src/Frontend/ConfigFile/Dataset/: Dataset.h  GeometryDataset.C  MantaDataset.C  VolumeDataset.C
src/Frontend/ConfigFile/filereaders/: ObjReader.cpp  ObjReader.h
src/Frontend/GluRay/: CMakeLists.txt
src/GVT/: CMakeLists.txt
src/GVT/Backend/: MetaProcessQueue.h  adapt_param.h
src/GVT/Concurrency/: TaskScheduling.h  ThreadSafeQueue.h
src/GVT/Data/: derived_types.h  transform.cpp  transform.h
src/GVT/Data/primitives/: gvt_bbox.cpp  gvt_bbox.h  gvt_lightsource.cpp  gvt_lightsource.h  gvt_material.cpp  gvt_material.h  gvt_mesh.cpp  gvt_mesh.h  gvt_ray.cpp  gvt_ray.h
src/GVT/Data/scene/: Image.h  Utils.C
src/GVT/DataSet/: Dataset.cpp  Dataset.h
src/GVT/Data_old/: convert.h  data_interface.h
src/GVT/Data_old/primitives/: gvt_lightsource.cpp  gvt_mesh.cpp
src/GVT/Domain/: Domain.cpp  Domain.h  GeometryDomain.C  GeometryDomain.h  VolumeDomain.C  VolumeDomain.h  domains.h  gvtCell.h
src/GVT/Environment/: Camera.cpp  Camera.h  RayTracerAttributes.cpp  RayTracerAttributes.h
src/GVT/MPI/: SINGLENODE.h
src/GVT/Math/: Function.h  Matrix.h  Unit.h  Vector.h  VectorOperators.inl
src/GVT/SINGLE/: MPICOMM.h
src/GVT/Scheduler/: ImageSchedule.h  scheduler.h  schedulers.h
src/GVT/Scheduler/adapter/: scheduler_adapter.h  scheduler_adapters.h  scheduler_hybrid_adapter.h
src/GVT/Scheduler/hybrid/: LoadAnotherSchedule.h  LoadManySchedule.h  LoadOnceSchedule.h
src/GVT/Tracer/: DomainTracer.h  HybridTracer.h  ImageTracer.h  Tracer.h
src/GVT/common/: dbg.h  documentation.h
src/GVT/utils/: readply.cpp
src/GVT_old/: CMakeLists.txt
src/GVT_old/Concurrency/: TaskScheduling.cpp  TaskScheduling.h
src/GVT_old/Data/: primitives.h
src/GVT_old/Data/primitives/: gvt_bbox.h  gvt_ray.cpp  gvt_ray.h
src/GVT_old/Data/scene/: Image.C  Utils.h
src/GVT_old/DataSet/: Dataset.h
src/GVT_old/Domain/: Domain.h  GeometryDomain.h  gvtCell.cpp
src/GVT_old/Environment/: Camera.cpp  RayTracerAttributes.cpp
src/GVT_old/MPI/: mpi_wrappers.h
src/GVT_old/Math/: Angle.h  Constants.h  GVTMath.h  MatrixOperation.inl  Vector.h
src/GVT_old/SINGLE/: comm_data.h
src/GVT_old/Scheduler/: DomainSchedule.h  HybridSchedule.h
src/GVT_old/Scheduler/adapter/: scheduler_base_adapter.h
src/GVT_old/Scheduler/hybrid/: AdaptiveSendSchedule.h  GreedySchedule.h  HybridBaseSchedule.h  LoadAnyOnceSchedule.h  RayWeightedSpreadSchedule.h  SpreadSchedule.h
src/GVT_old/Tracer/: DomainTracer.h  HybridTracer.h  ImageTracer.h  Tracer.h  tracers.h
src/GVT_old/common/: camera_config.h  debug.h  utils.h
src/GVT_old/utils/: readply.h
src/apps/glTrace/: CMakeLists.txt  GLTrace.C
src/apps/mpitrace/: CMakeLists.txt  MPITrace.C
src/apps/render/: AmrApp.cpp  CMakeLists.txt  ConfigFileLoader.cpp  ConfigFileLoader.h  EmbreeRayTracer.cpp  EmbreeRayTracer.h  GLTrace.cpp  GVTTrace.cpp  ImageDiff.cpp  MantaRayTracer.cpp  MantaRayTracer.h  OptixRayTracer.cpp  OptixRayTracer.h  ParseCommandLine.h  PlyApp.cpp  SimpleApp.cpp  SimpleFileLoadApp.cpp  Tess.cpp  TessApp.cpp  VolApp.cpp
src/data/: BBox.cpp  BBox.h  CMakeLists.txt  Data.h  Material.cpp  Ray.cpp  Ray.h  RayGroup.h  TransferFunction.h  Volume.h  gvt2_data_tests.cpp  vec.h
src/gvt/core/comm/: CMakeLists.txt  comm.h  communicator.cpp  communicator.h  message.cpp  message.h
src/gvt/core/comm/communicator/: acomm.cpp  acomm.h  scomm.cpp  scomm.h
src/gvt/core/comm/vote/: vote.cpp  vote.h  votebooth.cpp  votebooth.h
workNotes/: CMakeCache.txt  (+1 more)
(+442 files in other folders)
